# gfx-test

./: Cargo.toml  README.md
assets/shaders/: fragment.frag  vertex.vert
src/: main.rs
src/assets/shaders/: fragment.frag  vertex.vert
