[package]
name = "gfx-test"
version = "0.1.0"
authors = ["brsnb <49287229+brsnb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-auxil = "0.5"
gfx-hal = "0.6"
shaderc = "0.6"
winit = "0.22"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "0.6"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "0.6"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "0.6"
features = ["x11"]
