[package]
name = "gfx-test"
version = "0.1.0"
authors = ["brsnb <49287229+brsnb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
log = "0.4"
env_logger = "0.7"
gfx-auxil = "0.5"
gfx-hal = "0.6"
shaderc = "0.6"
winit = "0.22"
gfx-backend-empty = "0.6.0"

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
package = "gfx-backend-metal"
version = "0.6"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
package = "gfx-backend-dx12"
version = "0.6"
optional = true

[dependencies.gfx-backend-vulkan]
package = "gfx-backend-vulkan"
version = "0.6"
features = ["x11"]
optional = true
